<resources>
    <string name="app_name">Calculator_Constraint</string>
    <string name="percent">%</string>
    <string name="c">C</string>
    <string name="del">Del</string>
    <string name="dele">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="umno">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plud">+</string>
    <string name="_0">0</string>
    <string name="dote">.</string>
    <string name="ravno">=</string>
    <string name="result">= 0</string>
    <string name="night">ночь</string>
</resources>