<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/thema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_30"
        android:layout_marginTop="@dimen/sp_30"
        android:text="@string/night"
        android:textSize="@dimen/sp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:text=""
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/result"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/percent"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/c"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/del"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/del"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/dele"
        app:layout_constraintStart_toEndOf="@+id/C"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/dele"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/del"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_7"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_8"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/_9"
        app:layout_constraintStart_toEndOf="@id/_7"
        app:layout_constraintTop_toBottomOf="@id/percent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_9"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/umno"
        app:layout_constraintStart_toEndOf="@id/_8"
        app:layout_constraintTop_toBottomOf="@id/percent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/umno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/umno"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_9"
        app:layout_constraintTop_toBottomOf="@id/percent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_4"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_5"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/_6"
        app:layout_constraintStart_toEndOf="@id/_4"
        app:layout_constraintTop_toBottomOf="@id/_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_6"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/_5"
        app:layout_constraintTop_toBottomOf="@id/_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/minus"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_6"
        app:layout_constraintTop_toBottomOf="@id/_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_1"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_2"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/_3"
        app:layout_constraintStart_toEndOf="@id/_1"
        app:layout_constraintTop_toBottomOf="@id/_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_3"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintStart_toEndOf="@id/_2"
        app:layout_constraintTop_toBottomOf="@id/_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/plud"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_3"
        app:layout_constraintTop_toBottomOf="@id/_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/_0"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/dote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/dote"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toStartOf="@id/ravno"
        app:layout_constraintStart_toEndOf="@id/_0"
        app:layout_constraintTop_toBottomOf="@id/_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ravno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_5"
        android:background="@drawable/roundedbutton"
        android:text="@string/ravno"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dote"
        app:layout_constraintTop_toBottomOf="@id/_1" />

</androidx.constraintlayout.widget.ConstraintLayout>